# mlx-lm-lora

./: .gitignore  ASYNC_TRAINING_README.md  GRPO_SERVER_INTEGRATION.md  README.md  TODO.md  custom_rewards.py  example_dataset.json  main.py  pyproject.toml  requirements.txt  setup.py  test_grpo_server_integration.py  train_async_grpo.py
.github/workflows/: python-publish.yml
examples/: config.yaml  custom_cpo_lora.ipynb  custom_grpo_lora.ipynb  custom_online_dpo.ipynb  custom_orpo_lora.ipynb  custom_r1.ipynb  custom_sft.ipynb  custom_sft.py  custom_sft_lora.ipynb  example_lora.yaml  gemma3n-r1.ipynb  grpo.py  grpo_2.py  grpo_yes.py  pretrain_fineweb-200k.ipynb  qwen3_moe_from_scratch.ipynb  simple_sft.ipynb  simple_sft.py  test_safe_sampler.py
mlx_lm_lora/: _version.py  create_sft.py  synthetic_dpo.py  synthetic_sft.py  train.py  utils.py
mlx_lm_lora/trainer/: __init__.py  async_batch_generator.py  async_training_example.py  callbacks.py  cpo_trainer.py  datasets.py  dpo_trainer.py  example_inference_client.py  grpo_trainer.py  judge.py  online_dpo.py  online_dpo_trainer.py  orpo_trainer.py  rflhf_trainer.py  sft_trainer.py  xpo_trainer.py
